--- a/app/src/main/res/layout/achievement_fragment.xml
+++ b/app/src/main/res/layout/achievement_fragment.xml
@@ -12,7 +12,7 @@
         android:gravity="center"
         android:textSize="20sp"
         android:textStyle="bold|italic"
-        android:text="Assume you weigh 150 lb" />
+        android:text="Assume you weigh 150 lb." />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
